# skat-app

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
ports/skat-core/: portfile.cmake  vcpkg.json
src/next-cli/: CMakeLists.txt  main.cpp
